# Directional-Spatial-Calibration-Guidance

./: LICENSE  README.md  pyproject.toml
dscg/: __init__.py  factors.py  guidance.py
examples/: diffusers_sd35_single_gpu.py  measure_factors_from_saved_tensors.py
tests/: test_factors.py  test_guidance.py
